tests/reference/run-array_shape_05-429216b.stderr
semantic error: Different shape for array assignment on dimension 1(2 and 1)
 --> tests/errors/array_shape_05.f90:9:5
  |
9 |     a = temp(i:i)
  |     ^^^^^^^^^^^^^ 
